methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  else for (i<-1 to 6) {
             ^