methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if (estSurBiscuit) {return true} 
  else for (i<-1 to 6) {
    avance;
    if (estSurBiscuit) {
      for (j<-1 to i) {recule}
      return true
    }}
}
haveBaggle()